--- a/liquidwar6/doc/glb-gdoc.texi
+++ b/liquidwar6/doc/glb-gdoc.texi
@@ -1,9 +1,7 @@
 @deftypefun {int} {lw6glb_test} (int @var{mode})
 @var{mode}:  0 for check only, 1 for full test
 
-Runs the @code{nod} module test suite. This one could fail if some
-sockets are already bound, for instance. It's still run even
-in check-only (mode=0) mode.
+Runs the @code{glb} module test suite.
 
 @strong{Return value:}  1 if test is successfull, 0 on error.
 @end deftypefun
