--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-11 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Fixed insertion of discovered nodes in database.
+
 	* Reverted list of verified nodes to list instead of hash.
 
 2010-08-10 : Christian Mauduit <ufoot@ufoot.org>
