--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-12 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Character escape/protection for SQL & HTML.
+
 2010-08-11 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Prepared Makefiles and headers for oob client implementation.
