--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -3524,6 +3524,15 @@ of space, tabs, or carriage returns only.
 @strong{Return value:}  1 if same, 0 if not.
 @end deftypefun
 
+@deftypefun {int} {lw6sys_str_starts_with} (char * @var{str}, char * @var{beginning})
+@var{str}:  the string to analyse
+
+@var{beginning}:  the pattern to search
+
+
+@strong{Return value:}  1 if str starts with beginning, 0 if not
+@end deftypefun
+
 @deftypefun {int} {lw6sys_skip_blanks} (char ** @var{str_ptr})
 @var{str_ptr}:  a pointer to a string pointer (read/write parameter).
 
