--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-13 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added a global conclusion message to all tests.
+
 	* Improved message parsing.
 
 2010-08-12 : Christian Mauduit <ufoot@ufoot.org>
