--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Implementing password checking in tcp/tcpd.
+
 2010-08-13 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added a global conclusion message to all tests.
