--- a/liquidwar6/doc/sys-gdoc.texi
+++ b/liquidwar6/doc/sys-gdoc.texi
@@ -2866,6 +2866,41 @@ and environment variables. Usefull to debug and know where the
 program is searching for things.
 @end deftypefun
 
+@deftypefun {char *} {lw6sys_password_checksum} (char * @var{seed}, char * @var{password})
+@var{seed}:  a seed to blur the password, can be NULL
+
+@var{password}:  the password, can be NULL
+
+Calculates the checksum of a password, and returns
+it as a string, ready to be sent on the network.
+If password is empty or NULL, then an empty (but
+not NULL unless internal error) string will be
+returned. All LW6 protocols should send
+these checksums instead of real passwords, then
+on server side value can be checked against both
+real password and its checksum. The seed is here
+so that eavesdropper can't reuse the checksum to
+connect on random sessions. Seed can typically
+be the node 'public_url' value.
+
+@strong{Return value:}  a dynamically allocated string
+@end deftypefun
+
+@deftypefun {int} {lw6sys_password_verify} (char * @var{seed}, char * @var{password_here}, char * @var{password_received})
+@var{seed}:  a seed to blur the password, can be NULL
+
+@var{password_here}:  the local password, can be NULL
+
+@var{password_received}:  the password received from network, can be NULL
+
+Tells wether a password received over the network is valid.
+The @code{password_here} argument (the local password) will be
+checksumed so that @code{password_received} is checked against both
+clear and checksumed values, so it can be in any form.
+
+@strong{Return value:}  1 if OK, passwords are the same, 0 if not.
+@end deftypefun
+
 @deftypefun {int} {lw6sys_file_exists} (char * @var{filename})
 @var{filename}:  the file to test
 
@@ -3524,13 +3559,39 @@ of space, tabs, or carriage returns only.
 @strong{Return value:}  1 if same, 0 if not.
 @end deftypefun
 
+@deftypefun {int} {lw6sys_str_is_same_no_case} (char * @var{str_a}, char * @var{str_b})
+@var{str_a}:  1st string to compare, can be NULL
+
+@var{str_b}:  2nd string to compare, can be NULL
+
+Compares two strings for equality. Difference with strcmp
+is that this one won't check for alphabetical order and
+return -1 or +1, but will check for NULL args.
+of space, tabs, or carriage returns only. This function
+is not case sensitive.
+
+@strong{Return value:}  1 if same, 0 if not.
+@end deftypefun
+
 @deftypefun {int} {lw6sys_str_starts_with} (char * @var{str}, char * @var{beginning})
 @var{str}:  the string to analyse
 
 @var{beginning}:  the pattern to search
 
+Tells wether string starts with a given beginning.
 
-@strong{Return value:}  1 if str starts with beginning, 0 if not
+@strong{Return value:}  1 if @code{str} starts with @code{beginning}, 0 if not
+@end deftypefun
+
+@deftypefun {int} {lw6sys_str_starts_with_no_case} (char * @var{str}, char * @var{beginning})
+@var{str}:  the string to analyse
+
+@var{beginning}:  the pattern to search
+
+Tells wether string starts with a given beginning. This function
+is not case sensitive.
+
+@strong{Return value:}  1 if @code{str} starts with @code{beginning}, 0 if not
 @end deftypefun
 
 @deftypefun {int} {lw6sys_skip_blanks} (char ** @var{str_ptr})
@@ -3901,6 +3962,14 @@ among other things. A canonized url passed into
 this function should come out exactly the same.
 
 @strong{Return value:}  a newly allocated string.
+@end deftypefun
+
+@deftypefun {int} {lw6sys_url_is_canonized} (char * @var{url})
+@var{url}:  the URL to check
+
+Checks wether an URL is in its canonized form.
+
+@strong{Return value:}  1 if OK (canonized form), 0 if not
 @end deftypefun
 
 @deftypefun {int} {lw6sys_vthread_run} (lw6sys_thread_callback_func_t @var{callback_func}, lw6sys_thread_callback_func_t @var{callback_join}, void * @var{callback_data})
