--- a/liquidwar6/doc/msg-gdoc.texi
+++ b/liquidwar6/doc/msg-gdoc.texi
@@ -107,3 +107,33 @@ free them automatically with @code{lw6sys_free_callback} for instance.
 @strong{Return value:}  1 if line OK (and in this case @code{assoc} is updated), 0 if not.
 @end deftypefun
 
+@deftypefun {char *} {lw6msg_utils_get_assoc_str_with_default} (lw6sys_assoc_t * @var{assoc}, char * @var{key}, char * @var{default_value})
+@var{assoc}:  the string assoc to query
+
+@var{key}:  the key to find in the assoc
+
+@var{default_value}:  the default value to return
+
+Queries a string assoc for a given value, and if not available, returns
+default value. Not that default value (nor the assoc value) is copied,
+so you must take care all remain valid until usage of returned value
+is over.
+
+@strong{Return value:}  a string, must not be freed.
+@end deftypefun
+
+@deftypefun {int} {lw6msg_utils_get_assoc_int_with_default} (lw6sys_assoc_t * @var{assoc}, char * @var{key}, int @var{default_value})
+@var{assoc}:  the string assoc to query
+
+@var{key}:  the key to find in the assoc
+
+@var{default_value}:  the default value to return
+
+Queries a string assoc for a given value, and if not available, returns
+default value. Not that default value (nor the assoc value) is copied,
+so you must take care all remain valid until usage of returned value
+is over. This one will returned an int converted with @code{lw6sys_atoi}.
+
+@strong{Return value:}  a string, must not be freed.
+@end deftypefun
+
