--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2010-08-17 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Old nodes are now purged from list.
+
 	* Added SQL query log file.
 
 	* mod-tcp interprets OOB INFO and LIST responses. 
