--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2010-08-20 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Optimized network functions by using some static buffers.
+
 2010-08-19 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Implemented UDP INFO/LIST OOB.
