New frags calculation mode.

--- a/liquidwar6/doc/map-rules-selfdoc.texi
+++ b/liquidwar6/doc/map-rules-selfdoc.texi
@@ -130,6 +130,54 @@ packed together. This will allow lone fighters to regenerate a bit by hiding
 somewhere in the map. This is typically a low value, might even be 0.
 @end deffn
 
+@subsection frags-fade-out
+@deffn {Command-line option} @code{--frags-fade-out=<value>}
+@deffnx {Environment variable} @code{LW6_FRAGS_FADE_OUT}
+@deffnx {XML key} @code{frags-fade-out}
+Type: integer
+
+Default value: 95
+Min value: 10
+Max value: 100
+
+When a player looses (in deathmatch mode) all player points will be
+multiplicated by this percentage, for instance if it's 90 and player had 50
+points, then player will only have 45 points, then points corresponding to the
+new death will be added/substrated to its total. This is to avoid players with
+thousands of points in advance, and keep everyone in the race. A low value
+will minimize the importance of game start.
+@end deffn
+
+@subsection frags-mode
+@deffn {Command-line option} @code{--frags-mode=<value>}
+@deffnx {Environment variable} @code{LW6_FRAGS_MODE}
+@deffnx {XML key} @code{frags-mode}
+Type: integer
+
+Default value: 1
+Min value: 0
+Max value: 1
+
+Defines how points are calculated in deathmatch mode, 0 is old school simple
+mode, 1 is new proportional mode, with a total of 0 kept constant.
+@end deffn
+
+@subsection frags-to-distribute
+@deffn {Command-line option} @code{--frags-to-distribute=<value>}
+@deffnx {Environment variable} @code{LW6_FRAGS_TO_DISTRIBUTE}
+@deffnx {XML key} @code{frags-to-distribute}
+Type: integer
+
+Default value: 100
+Min value: 10
+Max value: 1000
+
+Defines how many points will be distributed when in deathmatch mode. When a
+player looses, this amont of points will be substracted to its total, and the
+same amount of points will be distributed to other live players,
+proportionnally to how many fighters they have on the battlefield.
+@end deffn
+
 @subsection glue-power
 @deffn {Command-line option} @code{--glue-power=<value>}
 @deffnx {Environment variable} @code{LW6_GLUE_POWER}
