--- a/liquidwar6/doc/map-rules-selfdoc.texi
+++ b/liquidwar6/doc/map-rules-selfdoc.texi
@@ -156,10 +156,13 @@ Type: integer
 
 Default value: 1
 Min value: 0
-Max value: 1
+Max value: 2
 
 Defines how points are calculated in deathmatch mode, 0 is old school simple
-mode, 1 is new proportional mode, with a total of 0 kept constant.
+mode. 1 is new proportional mode, with a total of 0 kept constant, that is,
+loosers loose as many points as attributed to winners. 2 is a mode in which at
+each death, winners are attributed a number of points proportional to their
+fighters, and loosers scores remain untouched.
 @end deffn
 
 @subsection frags-to-distribute
