--- a/liquidwar6/doc/map-rules-selfdoc.texi
+++ b/liquidwar6/doc/map-rules-selfdoc.texi
@@ -136,7 +136,7 @@ somewhere in the map. This is typically a low value, might even be 0.
 @deffnx {XML key} @code{frags-fade-out}
 Type: integer
 
-Default value: 95
+Default value: 100
 Min value: 10
 Max value: 100
 
@@ -145,7 +145,8 @@ multiplicated by this percentage, for instance if it's 90 and player had 50
 points, then player will only have 45 points, then points corresponding to the
 new death will be added/substrated to its total. This is to avoid players with
 thousands of points in advance, and keep everyone in the race. A low value
-will minimize the importance of game start.
+will minimize the importance of game start. This is only used in modes where
+frags are distributed in a proportional way.
 @end deffn
 
 @subsection frags-mode
@@ -154,15 +155,17 @@ will minimize the importance of game start.
 @deffnx {XML key} @code{frags-mode}
 Type: integer
 
-Default value: 1
+Default value: 2
 Min value: 0
-Max value: 2
+Max value: 3
 
 Defines how points are calculated in deathmatch mode, 0 is old school simple
-mode. 1 is new proportional mode, with a total of 0 kept constant, that is,
-loosers loose as many points as attributed to winners. 2 is a mode in which at
-each death, winners are attributed a number of points proportional to their
-fighters, and loosers scores remain untouched.
+mode. 1 is in a mode in which 1 point is attributed to every winner, and
+looser looses all the corresponding points (total is always 0). 2
+isproportional mode, with a total of 0 kept constant, that is, loosers loose
+as many points as attributed to winners. 3 is a mode in which at each death,
+winners are attributed a number of points proportional to their fighters, and
+loosers scores remain untouched.
 @end deffn
 
 @subsection frags-to-distribute
@@ -398,18 +401,20 @@ fighter to always avoid the enemy, and groups of fighters will just pass each
 other without any fight. Matter of taste.
 @end deffn
 
-@subsection respawn-random-place
-@deffn {Command-line option} @code{--respawn-random-place=<value>}
-@deffnx {Environment variable} @code{LW6_RESPAWN_RANDOM_PLACE}
-@deffnx {XML key} @code{respawn-random-place}
+@subsection respawn-position-mode
+@deffn {Command-line option} @code{--respawn-position-mode=<value>}
+@deffnx {Environment variable} @code{LW6_RESPAWN_POSITION_MODE}
+@deffnx {XML key} @code{respawn-position-mode}
 Type: integer
 
 Default value: 1
 Min value: 0
-Max value: 1
+Max value: 2
 
-If set, team will respawn in a random place, instead of re-appearing always at
-the same place.
+Defines how teams are set up on the map when respawning. 0 means teams respect
+the pre-defined start positions. 1 means that a random position will be
+picked, among the existing positions. That is, red could take green's place. 2
+means total randomness, teams can appear anywhere.
 @end deffn
 
 @subsection respawn-team
@@ -761,10 +766,10 @@ Default value: 0
 Min value: 0
 Max value: 2
 
-Defines how teams or set up on the map at game startup. 0, the default, means
-teams respect the pre-defined start positions. 1 means that a random position
-will be picked, among the existing positions. That is, red could take green's
-place. 2 means total randomness, teams can appear anywhere.
+Defines how teams are set up on the map at game startup. 0 means teams respect
+the pre-defined start positions. 1 means that a random position will be
+picked, among the existing positions. That is, red could take green's place. 2
+means total randomness, teams can appear anywhere.
 @end deffn
 
 @subsection start-purple-x
